--- a/netlify.toml
+++ b/netlify.toml
@@ -3,13 +3,19 @@
   functions = "netlify/functions"
   publish = "dist/spa"
 
-
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
-  
+
+# API route → serverless function
 [[redirects]]
   force = true
   from = "/api/*"
   status = 200
   to = "/.netlify/functions/api/:splat"
+
+# SPA routing → always return index.html
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
